--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -4,4 +4,7 @@
     list-style-type: none;
     text-align: left;
     padding: 0;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: auto;
 }
